--- a/my-app/src/Styles/Navbar.css
+++ b/my-app/src/Styles/Navbar.css
@@ -2,6 +2,7 @@
 .hamburger-container{
     z-index: 11;
     position: relative;
+    display: none;
 }
 .nav-menu{
 background-color: black;
@@ -14,14 +15,17 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 font-family: Arial Black, Helvetica, sans-serif;
-
 }
 .nav-link{   
     color: white;
     text-decoration: none;
     font-size: 50px;
-    /* transition: all 10ms ease-in-out; */
 }
 .nav-link:hover{
     text-decoration: underline;
 }
+@media screen and (max-width: 600px) {
+ .hamburger-container{
+    display: block;
+ }
+  }
