--- a/my-app/src/Styles/Navbar.css
+++ b/my-app/src/Styles/Navbar.css
@@ -1,8 +1,7 @@
 
 .hamburger-container{
-    z-index: 11;
     position: relative;
-    display: none;
+    z-index: 11;
 }
 .nav-menu{
 background-color: black;
@@ -24,8 +23,8 @@ font-family: Arial Black, Helvetica, sans-serif;
 .nav-link:hover{
     text-decoration: underline;
 }
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
  .hamburger-container{
     display: block;
  }
-  }
+  } */
