--- a/my-app/src/Styles/Home.css
+++ b/my-app/src/Styles/Home.css
@@ -43,3 +43,21 @@ margin-bottom: 0;
 .home-link:hover{
     font-size: 27px
 }
+
+/* Responsive Code */
+
+@media screen and (max-width: 850px) {
+    .home-page h1{
+        font-size: 70px;
+    }
+  }
+  @media screen and (max-width: 660px) {
+    .home-page h1{
+        font-size: 50px;
+    }
+  }
+  @media screen and (max-height: 450px) {
+    .home-page h1{
+        font-size: 60px;
+    }
+  }
