Added Responsive styles

--- a/my-app/src/Styles/Contact.css
+++ b/my-app/src/Styles/Contact.css
@@ -1,3 +1,9 @@
+.contact-page-container{
+    display: flex;
+ justify-content: center;
+    align-items: center;
+    min-height: 100dvh;
+}
 
 .contact-heading{
     font-family: Arial, Helvetica, sans-serif;
@@ -8,13 +14,13 @@
 .contact-page{
     display: flex;
    justify-content: center;
-   margin-top: 60px;
+   margin: 30px;
 }
 
 form{
     display: flex;
     flex-direction: column;
-    width: 55dvw;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
 }
@@ -78,3 +84,18 @@ background-color: rgba(255, 255, 255, 0.9);
 }
 
 /* Responsive Styles  */
+
+@media screen and (max-width: 900px) {
+    .contact-heading{
+        font-size: 40px;
+    }
+  }
+
+@media screen and (max-width: 700px) {
+    .contact-page{
+        flex-direction: column;
+    }
+    .contact-side{
+        margin: 50px 0px;
+    }
+  }
