--- a/my-app/src/Styles/Home.css
+++ b/my-app/src/Styles/Home.css
@@ -6,8 +6,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
- height: 100dvh;
- width: 100dvw;
+ min-height: 100dvh;
+ width: 100%;
  font-family: Arial , Helvetica, sans-serif;
 }
 
