--- a/my-app/src/Styles/Work.css
+++ b/my-app/src/Styles/Work.css
@@ -54,22 +54,12 @@
   .work-section h1{
     font-family: Arial Black, Helvetica, sans-serif;
     text-transform: uppercase;
-    color: white;
     text-align: center;
     font-size: 40px;
       animation: autoShow both;
     animation-timeline: view(70% 5%);
   }
-
-/* .work-img{
-    background-position: center;
- width: 100%;
-      height: 60dvh;
-       background-repeat: no-repeat;
-    background-size: contain;
-  
-} */
-@keyframes autoShow{
+  @keyframes autoShow{
 
     from{
         opacity: 0;
@@ -80,4 +70,25 @@
     }
 }
 
+.work-img{
+    background-position: center;
+ width: 100%;
+      height: 60dvh;
+       background-repeat: no-repeat;
+    background-size: contain;
+    animation: autoShow both;
+    animation-timeline: view(70% 5%);
+}
 
+
+.img-one{
+    background-image: url('../assets/oree_logo.png');
+}
+.img-two{
+background-image: url('../assets/wa_mobile2.png');
+/* border: 1px solid #DB9B9A; */
+}
+@media screen and (max-width: 600px) {
+    .work-section h1{font-size: 25px;
+  }
+}
